[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -334.0
margin_right = 153.0
margin_bottom = 66.0

[node name="PlayButton" type="Button" parent="Panel/ButtonsContainer"]
margin_right = 300.0
margin_bottom = 20.0
text = "PLAY"

[node name="LevelsButton" type="Button" parent="Panel/ButtonsContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0
text = "LEVELs"

[node name="OptionsButton" type="Button" parent="Panel/ButtonsContainer"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 68.0
text = "OPTIONS"

[connection signal="pressed" from="Panel/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel/ButtonsContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Panel/ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
